added cow sound

--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -37,5 +37,9 @@
     </form>
     <br />
     <p>Your carbon footprint based on your meat consumption is: <input type="text" id="result" /></p>
+    <br>
+    <br>
+    <input type="button" value="Hear what this guys has to say!" onclick="play()">
+    <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
   </body>
 </html>
